Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Tienda Online</title>
-    <link rel="stylesheet" href="Index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
         <p>&copy; 2024 Mi Tienda Online. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="Index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
