--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mi Tienda Online</title>
     <link rel="stylesheet" href="index.css">
 </head>
-
+<script src="//code.tidio.co/n3iepn5swf7hckqyjpllwdqikxvzt7vr.js" async></script>
 <body>
     <header>
         <nav>
